--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,6 @@
   "semi": true,
   "useTabs": false,
   "singleQuote": true,
-  "editorconfig": true,
   "bracketSpacing": true,
   "jsxSingleQuote": false,
   "bracketSameLine": false,
@@ -15,5 +14,30 @@
   "arrowParens": "always",
   "trailingComma": "all",
   "plugins": [],
-  "overrides": []
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "parser": "json"
+      }
+    },
+    {
+      "files": "*.css",
+      "options": {
+        "parser": "css"
+      }
+    },
+    {
+      "files": "*.less}",
+      "options": {
+        "parser": "less"
+      }
+    },
+    {
+      "files": "*.scss}",
+      "options": {
+        "parser": "scss"
+      }
+    }
+  ]
 }
